# homebrew-taskplayer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  capacity-slit-row-layout.html  growing-bar-example.html  labeled-bar-concepts.html  latest.json  music-widget-concepts.html  overflow-concepts.html  package-lock.json  package.json  pnpm-lock.yaml  recent-page-concepts.html  row-concepts.html  session-list-by-task-concepts.html  session-period-views-concepts.html  session-ruler-unified-concept.html  styles.css  tsconfig.json  vite.config.js
.github/workflows/: compatibility.yml  release.yml
Casks/: taskplayer.rb
concepts/: album-grouping-concepts.html  capacity-slit-concepts.html  day-timeline-concepts.html  growing-bar-concepts.html  list-color-wash-concepts.html  segmented-bar-concepts.html  segmented-bar-full-list.html  track-details-concepts.html
docs/: adhd-design-principles.md  compatibility-policy.md  features.md  homepage-now-spec.md  planner-calendar-spec.md  pomodoro-user-stories.md  rust-module-map.md  session-sync-design.md  ui-architecture-assessment.md
docs/decisions/: 0000-template.md  0001-documentation-system.md  0002-automatic-pomodoro-transitions.md  0003-backward-compatible-storage-and-sync.md  0004-lit-html-component-model.md  0005-fold-personal-growth-into-health.md  0006-desktop-window-minimum.md  0007-now-playing-focus-page.md  0008-react-and-vite-migration.md  0009-rust-shell-module-boundaries.md  0010-hybrid-focus-audio-sourcing.md  0011-local-audio-interruption-detection.md  README.md  (+7 more)
memory/: preferences.md
scripts/: binary-runner.sh  check-supabase-compatibility.mjs  dev-runner.sh  extract-release-notes.mjs  generate-update-key.sh  release.sh  setup-dev-env.sh
src/: global.d.ts  index.html  index.tsx  main.js  music.js  music.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: db.rs  db.sql  lib.rs  migrations.rs  models.rs  schedule.rs  timer.rs
src-tauri/core/src/db/: planned_sessions.rs
src-tauri/core/src/migrations/: 001_init.sql
src-tauri/core/src/planner/: constants.rs  mod.rs  tests.rs  time.rs
src-tauri/icons/: [email protected]  icon.icns
src-tauri/src/: audio_interruption.rs  auth.rs  auth_session.rs  background_jobs.rs  bindings.rs  commands.rs  config.rs  constants.rs  device.rs  diagnostics.rs  lib.rs  main.rs  playback_pause.rs  playback_service.rs  snapshot.rs  startup.rs  state.rs  sync.rs  sync_service.rs  system_sleep.rs  tick_loop.rs  tick_notifications.rs  timer_diagnostics.rs  tray.rs
src-tauri/src/audio_interruption/: core_audio.rs  platform.rs  platform_tests.rs  takeover.rs  tests.rs
src-tauri/src/auth/: oauth.rs  storage.rs  tests.rs  token.rs
src-tauri/src/commands/: audio.rs  data.rs  lists.rs  metrics.rs  music.rs  planner.rs  playback.rs  schedule.rs  sessions.rs  settings.rs  system.rs  tasks.rs
src-tauri/src/commands/tasks/: details.rs  lifecycle.rs
src-tauri/src/sync/: backfill.rs  compatibility.rs  compatibility_tests.rs  content_models.rs  music_models.rs  planner_models.rs  pull.rs  push.rs  runtime_models.rs  session_models.rs  transport.rs
src-tauri/src/tray/: menu.rs  status.rs
supabase/: config.toml
(+116 files in other folders)
