[package]
name = "taskplayer"
version = "0.1.0"
edition = "2021"
description = "TaskPlayer — a Spotify-style deep-work timer for macOS"
default-run = "taskplayer"

[[bin]]
name = "taskplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
taskplayer-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["core"]

[profile.release]
opt-level = "s"
lto = true
strip = true
