[package]
name = "taskplayer"
version = "0.6.1"
edition = "2021"
description = "TaskPlayer — a Spotify-style deep-work timer for macOS"
default-run = "taskplayer"

[[bin]]
name = "taskplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
taskplayer-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
sha2 = "0.11.0"
base64 = "0.22.1"
getrandom = "0.4.3"

[workspace]
members = ["core"]

[profile.release]
opt-level = "s"
lto = true
strip = true
