[package]
name = "taskplayer"
version = "0.9.5"
edition = "2021"
description = "TaskPlayer — a playlist-style deep-work timer for macOS"
default-run = "taskplayer"

[[bin]]
name = "taskplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
taskplayer-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
sha2 = "0.11.0"
base64 = "0.22.1"
getrandom = "0.4.3"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWorkspace", "block2"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSNotification", "NSOperation", "NSString", "block2"] }

[workspace]
members = ["core"]

[profile.release]
opt-level = "s"
lto = true
strip = true
