[package]
name = "taskplayer-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "taskplayer_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
